:memo: Termino de evaluacion

--- a/contenido/pag27.html
+++ b/contenido/pag27.html
@@ -655,9 +655,49 @@
             </div>
 
         </div>
-
+        
         <div class="cont-btnEvaluar">
             <a id="evaluarCuestionario" href="#">Evaluar</a>
+        </div>
+
+        <div id="retro-positiva">
+            <div class="mensaje">
+                <p>¡FELICIDADES!</p>
+                <p>Has concluido el curso con la calificación final de:</p>
+            </div>
+            <div class="cont-calificacion">
+                <p id="calificacion"></p>
+            </div>
+
+            <div class="final">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag27/personas-medalla.svg" alt="medalla">
+                </figure>
+                <div class="cont-info">
+                    <div class="parrafo">
+                        <p>¡No dejes de utilizar tus habilidades y continúa atento a cualquier conducta sospechosa a tu alrededor!</p>
+                    </div>
+                    <div class="botones">
+                        <a href="" id="registrar">Registrar</a>
+                        <a href="" id="cerrar">Cerrar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="retro-negativa">
+            <div class="mensaje">
+                <p>Oh, no! No alcanzaste el mínimo para aprobar el curso</p>
+                <p>¡vuelve a intentarlo!</p>
+            </div>
+            <div class="final">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag27/chica.svg" alt="chica">
+                </figure>
+                <div class="botones">
+                    <a href="" id="reintentar">Reintentar</a>
+                </div>
+            </div>
         </div>
     </div>  
 </body>
