--- a/index.html
+++ b/index.html
@@ -54,157 +54,157 @@
             <a href="#" class="enlacesPaginas" data-pagina="1">
                 <div class="option">
                     <i class="fa-solid fa-file" title="Antecedentes y conceptos PLD y CFT"></i>
-                    <h4>Página 02</h4>
+                    <h4>Antecedentes y conceptos PLD y CFT</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="2">
                 <div class="option">
-                    <i class="fa-solid fa-pencil" title="Actividad de reforzamiento"></i>
-                    <h4>Página 03</h4>
+                    <i class="fa-solid fa-file" title="Actividad de reforzamiento"></i>
+                    <h4>¿Qué es y cuál es el propósito del Lavado de Dinero y del Financiamiento al Terrorismo?</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="3">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 04</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Principales obligaciones en materia de Prevención de Lavado de Dinero y Financiamiento al Terrorismo</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="4">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 05</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Política de Identificación del cliente</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="5">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 06</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Identificación de cliente, ¿en qué consiste?</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="6">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 07</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Entrevista Personal con el cliente</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="7">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 08</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Integración de expediente y umbrales</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="8">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 09</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Actualización de expediente</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="9">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 10</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Política de conocimiento del cliente: conocimiento, clasificación de grado de riesgo escalamiento de aprobación, personas políticamente expuestas</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="10">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 11</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Reportes de Operaciones</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="11">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 12</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Cuentas concentradoras</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="12">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 13</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Estructuras internas: ¿Cuáles son sus funciones?</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="13">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 14</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Sistemas automatizados</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="14">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 15</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Sistemas automatizados</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="15">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 16</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Listas de personas bloqueadas</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="16">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 17</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Metodología de Evaluación de Riesgos PLD/CFT</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="17">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 18</h4>
+                    <i class="fa-solid fa-solid fa-pencil" title="Evaluación final"></i>
+                    <h4>Actividad 1</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="18">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 19</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Historia de cambios en la regulación</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="19">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 20</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Relación entre la regulación y nuestro Manual de Cumplimiento de PLD/CFT</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="20">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 21</h4>
+                    <i class="fa-solid fa-solid fa-pencil" title="Evaluación final"></i>
+                    <h4>Actividad 2</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="21">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 22</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Lavado de Dinero</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="22">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 23</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Organismos y autoridades que participan en la prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="23">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 24</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Marco Legal en México</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="24">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 25</h4>
+                    <i class="fa-solid fa-solid fa-pencil" title="Evaluación final"></i>
+                    <h4>Actividad de Reforzamiento</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="25">
                 <div class="option">
-                    <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 26</h4>
+                    <i class="fa-solid fa-file" title="Evaluación final"></i>
+                    <h4>Tipologías y casos</h4>
                 </div>
             </a>
             <a href="#" class="enlacesPaginas" data-pagina="26">
                 <div class="option">
                     <i class="fa-solid fa-file-lines" title="Evaluación final"></i>
-                    <h4>Página 27</h4>
+                    <h4>Evaluación</h4>
                 </div>
             </a>
         </div>
