--- a/contenido/pag15.html
+++ b/contenido/pag15.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div id="instrucciones">
+    <!-- <div id="instrucciones">
         <figure class="mano">
             <img src="./build/img/contenido/Pag15/mano.svg" alt="Mano">
         </figure>
         <p>Da clic en cada colega para conocer más detalles sobre tus deberes de confidencialidad.</p>
-    </div>
+    </div> -->
     <div id="cont-verde">
         <a class="btn_cuadros12" href="#globo1">
             <figure class="personaje1">
