actulaizacion de pagina 23-2

--- a/contenido/pag23.html
+++ b/contenido/pag23.html
@@ -128,5 +128,69 @@
             </div>
         </div>
     </div>
+    <div class="contenedor2Pag23">
+        <div class="cuadro2ClickPag23">
+            <figure class="icon2c">
+                <img src="/build/img/contenido/Pag23/i-click.svg" alt="icono click">
+            </figure>
+            <p>
+                Da clic en el nombre de cada organismo para conocer sus funciones.
+            </p>
+        </div>
+        <div class="contenido2Pag23">
+            <div class="columnaLogDep">
+                <a href="javascript:mostrar2Dep1()">
+                    <div class="logDep" id="Dep1">
+                        <figure class="logoDep1">
+                            <img src="/build/img/contenido/Pag23/gafi.svg" alt="gafi">
+                        </figure>
+                    </div>
+                </a>
+                <a href="javascript:mostrar2Dep2()">
+                    <div class="logDep" id="Dep2">
+                        <figure class="logoDep2">
+                            <img src="/build/img/contenido/Pag23/shcp.svg" alt="shcp">
+                        </figure>
+                    </div>
+                </a>
+                <a href="javascript:mostrar2Dep3()">
+                    <div class="logDep" id="Dep3">
+                        <figure class="logoDep3">
+                            <img src="/build/img/contenido/Pag23/uif.svg" alt="uif">
+                        </figure>
+                    </div>
+                </a>
+                <a href="javascript:mostrar2Dep4()">
+                    <div class="logDep" id="Dep4">
+                        <figure class="logoDep4">
+                            <img src="/build/img/contenido/Pag23/cnsf.svg" alt="cnsf">
+                        </figure>
+                    </div>
+                </a>
+            </div>
+            <div class="columnaInfo">
+                <div class="infoDepCol2" id="info1Col2">
+                   <p>
+                        La Financial Action Task Force o Grupo de Acción Financiera Internacional, promueve la implementación efectiva de medidas, regulaciones y operaciones para combatir el Lavado de Dinero y el Financiamiento al Terrorismo a través de sus “40 Recomendaciones”. 
+                   </p> 
+                </div>
+                <div class="infoDepCol2" id="info2Col2">
+                    <p>
+                        La Secretaría de Hacienda y Crédito Público, a través de la Unidad de Seguros, Pensiones y Seguridad Social, crea el marco jurídico relativo a la PLD/CFT por medio de la formulación de políticas de promoción, regulación y supervisión, así como la interpretación del Marco Normativo.
+                    </p>
+                </div>
+                <div class="infoDepCol2" id="info3Col2">
+                    <p>
+                        La Unidad de Inteligencia Financiera de México, perteneciente a la SHCP, es la responsable de recibir, analizar e informar a las autoridades competentes sobre información de índole financiera.
+                    </p>
+                </div>
+                <div class="infoDepCol2" id="info4Col2">
+                    <p>
+                        La Comisión Nacional de Seguros y Fianzas, supervisa que los sujetos obligados, cumplan con sus obligaciones por medio de acciones de vigilancia e inspección. 
+                    </p>
+                </div>
+            </div>
+        </div> 
+    </div>
 </body>
 </html>
