:bug: Areglos nav

--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -115,7 +115,8 @@
 
         <div id="mensaje05_2">
             <p>
-                Elige tu perfil para saber las consideraciones para identificar correctamente los momentos de identificación del cliente en tu área de acción.
+                De acuerdo a la empresa y las funciones que realizas en tu puesto selecciona la opción que necesites, en el caso de la División de Soporte Empresarial y Transformación y la División de Gestión de Activos y Estrategia Financiera aplican ambos casos.
+
             </p>
         </div>
     </div>
