--- a/contenido/pag13.html
+++ b/contenido/pag13.html
@@ -30,7 +30,8 @@
         </figure>
         <div id="definicion">
             <p>Comité de Comunicación y Control.</p>
-            <p> Es un órgano colegiado de funcionarios de distintas áreas. Sus funciones son:</p>
+            <p> Es un órgano colegiado de funcionarios de distintas áreas.</p>
+            <p>Da clic en las flechas de izquierda y derecha para conocer sus funciones</p>
         </div>
     </div>
 
