--- a/contenido/pag25.html
+++ b/contenido/pag25.html
@@ -28,7 +28,7 @@
                     <img src="./build/img/contenido/Pag25/Mano.svg" alt="mano">
                 </figure>
                 <p>
-                    Arrastra las definiciones debajo de la definición que  corresponda.
+                    Arrastra las etiquetas debajo de la definición que le corresponda.
                 </p>
             </div>
 
