--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -320,7 +320,7 @@
                             </p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag26/libreta.svg" alt="medalla">
+                            <img class="cuaderno" src="./build/img/contenido/Pag26/libreta.svg" alt="medalla">
                         </figure>
                     </cont>
                 </div>
@@ -579,7 +579,7 @@
                             </p>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag26/libreta.svg" alt="medalla">
+                            <img class="cuaderno" src="./build/img/contenido/Pag26/libreta.svg" alt="medalla">
                         </figure>
                     </cont>
                 </div>
@@ -857,7 +857,7 @@
                     <cont class="instrucciones">
                         <div class="mano">
                             <figure class="cont-imagen">
-                                <img src="./build/img/contenido/Pag26/Mano.svg" alt="mano">
+                            <img class="cuaderno" src="./build/img/contenido/Pag26/Mano.svg" alt="mano">
                             </figure>
                             <p>Da clic para comenzar la evaluación final.
                             </p>
