--- a/contenido/pag27.html
+++ b/contenido/pag27.html
@@ -67,7 +67,7 @@
                             <h2>c.</h2>
                         </div>
                         <div class="respuesta" id="respuestaC1">
-                            <p>Auditoría Interna</p>
+                            <p>El Oficial de Cumplimiento </p>
                         </div>
                     </div>
 
