--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -21,11 +21,12 @@
                 <img src="./build/img/contenido/Pag01/personaje.svg" alt="Personaje">
             </figure>
         </div>
-        <div id="cont-boton">
-            <span id="texto">Para visualizar el contenido de tu curso, deslízate hacia abajo y da clic en los
-                elementos
-                interactivos que parpadean.</span>
-            <figure class="boton">
+        <div id="cont-instrucciones">
+            <span id="instrucciones-pag01">Para visualizar el contenido de tu curso, deslízate hacia abajo y da clic en los
+                elementos interactivos que parpadean.<br>
+                Para ver los temas de este curso da clic en el botón de hamburguesa en la esquina superior.
+            </span>
+            <figure class="mano-pag01">
                 <img src="./build/img/contenido/Pag01/boton.svg" alt="Boton">
             </figure>
         </div>
