--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -12,9 +12,9 @@
     <div id="cont-azul"></div>
     <div id="cont-pag06">
         <div id="cont-rojo">
-            <div id="instrucciones">
+            <div id="clic-pag06">
                 <p>Clic en cada botón para conocer más detalles.</p>
-                <figure class="mano">
+                <figure class="mano-pag06">
                     <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
                 </figure>
             </div>
