--- a/contenido/pag12.html
+++ b/contenido/pag12.html
@@ -15,8 +15,8 @@
             <figure class="personaje">
                 <img src="./build/img/contenido/Pag12/personaje.svg" alt="Personaje">
             </figure>
-            <span id="text">
-                <figure class="mano">
+            <span id="clic1-pag12">
+                <figure class="mano1-pag12">
                     <img src="./build/img/contenido/Pag12/mano.svg" alt="mano">
                 </figure>
                 <p>Da clic en cada botón para conocer más detalles.</p>
@@ -72,8 +72,8 @@
                 el pago de primas, deducibles
                 o compra de salvamentos.
             </div>
-            <div id="instrucciones">
-                <figure class="mano">
+            <div id="clic2-pag12">
+                <figure class="mano2-pag12">
                     <img src="./build/img/contenido/Pag12/mano.svg" alt="mano">
                 </figure>
                 <p>Da clic en cada botón para conocer más detalles.</p>
