--- a/contenido/pag16.html
+++ b/contenido/pag16.html
@@ -41,8 +41,8 @@
                     características.
                 </p>
             </div>
-            <div id="instrucciones">
-                <figure class="mano">
+            <div id="clic-pag16">
+                <figure class="mano-pag16">
                     <img src="./build/img/contenido/Pag16/mano.svg" alt="Mano">
                 </figure>
                 <p>Da clic en cada botón para conocerlas:</p>
