actualizacion relacion de columnas 22-2

--- a/contenido/pag22.html
+++ b/contenido/pag22.html
@@ -22,28 +22,34 @@
     </div>
     <div class="contenido1pag22">
         <div class="contenido1_1pag22">
-            <div class="cuadro-amarillo22">
-                <p>
-                    Colocación
-                </p>
-            </div>
-            <div class="cuadro-verde22">
-                <p>
-                    Estratificación o enmascaramiento
-                </p>
-            </div>
-            <div class="cuadro-azul22-2">
-                <p>
-                    Integración o reingreso 
-                </p>
-            </div>
+            <a href="javascript:mostrarEtapa1Pag22()">
+                <div class="cuadro-amarillo22">
+                    <p>
+                        Colocación
+                    </p>
+                </div>
+            </a>
+            <a href="javascript:mostrarEtapa2Pag22()">
+                <div class="cuadro-verde22">
+                    <p>
+                        Estratificación o enmascaramiento
+                    </p>
+                </div>
+            </a>
+            <a href="javascript:mostrarEtapa3Pag22()">
+                <div class="cuadro-azul22-2">
+                    <p>
+                        Integración o reingreso 
+                    </p>
+                </div>
+            </a>
         </div>
         <div class="contenido1_2-22">
             <div class="cuadro2-amarillo22">
                 <div class="minicuadro-claro">
 
                 </div>
-                <div class="minicuadro-amarillo">
+                <div class="minicuadro-amarillo" id="infoAmarilloPag22">
                     <figure class="triangulo">
                         <img src="/build/img/contenido/Pag22/triangulo-amarillo.svg" alt="triangulo amarillo">
                     </figure>
@@ -56,7 +62,7 @@
                 <div class="minicuadro-claro">
 
                 </div>
-                <div class="minicuadro-verde">
+                <div class="minicuadro-verde" id="infoVerdePag22">
                     <figure class="triangulo">
                         <img src="/build/img/contenido/Pag22/triangulo-verde.svg" alt="triangulo verde">
                     </figure>
@@ -69,7 +75,7 @@
                 <div class="minicuadro-claro">
 
                 </div>
-                <div class="minicuadro-azul">
+                <div class="minicuadro-azul" id="infoAzulPag22">
                     <figure class="triangulo">
                         <img src="/build/img/contenido/Pag22/triangulo-azul.svg" alt="triangulo azul">
                     </figure>
