:fire: Evaluacion random

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="options__menu">
-            <a href="#" class="select enlacesPaginas" data-pagina="0">
+            <!-- <a href="#" class="select enlacesPaginas" data-pagina="0">
                 <div class="option">
                     <i class="fa-solid fa-house" title="Bienvenida"></i>
                     <h4>Bienvenida</h4>
@@ -206,7 +206,7 @@
                     <i class="fa-solid fa-file-lines" title="Evaluación"></i>
                     <h4>Evaluación</h4>
                 </div>
-            </a>
+            </a> -->
         </div>
     </aside>
 
