--- a/contenido/pag22.html
+++ b/contenido/pag22.html
@@ -46,7 +46,7 @@
         </div>
         <div class="contenido1_2-22">
             <div class="cuadro2-amarillo22">
-                <div class="minicuadro-claro">
+                <div class="minicuadro-claro" id="claro1">
 
                 </div>
                 <div class="minicuadro-amarillo" id="infoAmarilloPag22">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="cuadro2-verde22">
-                <div class="minicuadro-claro">
+                <div class="minicuadro-claro" id="claro2">
 
                 </div>
                 <div class="minicuadro-verde" id="infoVerdePag22">
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="cuadro2-azul22">
-                <div class="minicuadro-claro">
+                <div class="minicuadro-claro" id="claro3">
 
                 </div>
                 <div class="minicuadro-azul" id="infoAzulPag22">
