--- a/contenido/pag22.html
+++ b/contenido/pag22.html
@@ -17,7 +17,7 @@
             <img src="/build/img/contenido/Pag22/i-click.svg" alt="icono click">
         </figure>
         <p>
-            Da clic en cada etapa para conocer más.
+            Da clic 2 veces zen cada etapa para conocer más.
         </p>
     </div>
     <div class="contenido1pag22">
@@ -49,7 +49,7 @@
                 <div class="minicuadro-claro" id="claro1">
 
                 </div>
-                <div class="minicuadro-amarillo" id="infoAmarilloPag22">
+                <div class="minicuadro-amarillo" id="info1EtapaPag22">
                     <figure class="triangulo">
                         <img src="/build/img/contenido/Pag22/triangulo-amarillo.svg" alt="triangulo amarillo">
                     </figure>
@@ -62,7 +62,7 @@
                 <div class="minicuadro-claro" id="claro2">
 
                 </div>
-                <div class="minicuadro-verde" id="infoVerdePag22">
+                <div class="minicuadro-verde" id="info2EtapaPag22">
                     <figure class="triangulo">
                         <img src="/build/img/contenido/Pag22/triangulo-verde.svg" alt="triangulo verde">
                     </figure>
@@ -75,7 +75,7 @@
                 <div class="minicuadro-claro" id="claro3">
 
                 </div>
-                <div class="minicuadro-azul" id="infoAzulPag22">
+                <div class="minicuadro-azul" id="info3EtapaPag22">
                     <figure class="triangulo">
                         <img src="/build/img/contenido/Pag22/triangulo-azul.svg" alt="triangulo azul">
                     </figure>
