:bug: Arreglos de estilos

--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -14,7 +14,7 @@
     </div>
     <div class="contenido2pag19">
         <figure class="persona1pag19">
-            <img src="/build/img/contenido/Pag19/persona1.svg" alt="persona1">
+            <img src="./build/img/contenido/Pag19/persona1.svg" alt="persona1">
         </figure>
         <div class="rec1pag19">
             <ul>
@@ -49,7 +49,7 @@
         </div>
         <figure class="contenedor2pag19">
             <figure class="persona2pag19">
-                <img src="/build/img/contenido/Pag19/persona2.svg" alt="persona 2">
+                <img src="./build/img/contenido/Pag19/persona2.svg" alt="persona 2">
             </figure>
         </figure>
     </div>
@@ -103,55 +103,61 @@
         </div>
     </div>
     <div class="contenido10pag19">
-        <div class="contenido11pag19">
-            <div class="cuadropag19-naranja">
+        <div class="titulos">
+            <div class="cuadro-naranja">
                 <p>
                     En Operaciones Relevantes, Inusuales e Internas Preocupantes: 
                 </p>
             </div>
-            <div class="cuadropag19-amarillo">
+            <div class="cuadro-amarillo">
                 <p>
                     En Estructuras Internas:
                 </p>
             </div>
-            <div class="cuadropag19-azul">
+            <div class="cuadro-azul">
                 <p>
                     En Capacitación y Difusión:
                 </p>
             </div>
         </div>
-        <div class="contenido12pag19">
-            <div class="cuadropag19 naranja">
-                <figure id="img1">
-                    <img src="./build/img/contenido/Pag19/billete-nj.svg" alt="icono billetes">
+        <div class="cont-cajas">
+            <div class="cajas">
+                <figure class="cont-imagen">
+                    <img src="/build/img/contenido/Pag19/circulo1.svg" alt="icono billetes">
                 </figure>
-                Ahora las operaciones <b>relevantes</b> se reportarán por un monto igual o superior a <b>$7,500</b> dólares de los Estados Unidos.
+                <div class="cont-parrafo" id="parrafo1">
+                    <p>Ahora las operaciones <b>relevantes</b> se reportarán por un monto igual o superior a <b>$7,500</b> dólares de los Estados Unidos.</p>
+                </div>
             </div>
-            <div class="cuadropag19 naranja">
-                <figure id="img2pag19">
-                    <img src="/build/img/contenido/Pag19/calendario-nj.svg" alt="icono calendario">
+            <div class="cajas">
+                <figure class="cont-imagen">
+                    <img src="/build/img/contenido/Pag19/circulo2.svg" alt="icono calendario">
                 </figure>
-                <b>Las operaciones inusuales e internas preocupantes</b>  deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado con ese carácter.
+                <div class="cont-parrafo" id="parrafo2">
+                    <p><b>Las operaciones inusuales e internas preocupantes</b>  deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado con ese carácter.</p>
+                </div>
             </div>
-            <div class="cuadropag19 amarillo">
-                <figure id="img3pag19">
-                    <img src="/build/img/contenido/Pag19/escudo-am.svg" alt="icono escudo">
+            <div class="cajas">
+                <figure class="cont-imagen">
+                    <img src="/build/img/contenido/Pag19/circulo3.svg" alt="icono escudo">
                 </figure>
-                Podrá nombrarse a un <b>Oficial de Cumplimiento</b> interino, en caso de ausencia temporal del mismo.
+                <div class="cont-parrafo" id="parrafo3">
+                    <p>Podrá nombrarse a un <b>Oficial de Cumplimiento</b> interino, en caso de ausencia temporal del mismo.</p>
+                </div>
             </div>
-            <div class="cuadropag19 azul">
-                <figure id="img4pag19">
-                    <img src="/build/img/contenido/Pag19/maestro-azul.svg" alt="icono maestro-azul">
+            <div class="cajas">
+                <figure class="cont-imagen">
+                    <img src="/build/img/contenido/Pag19/circulo4.svg" alt="icono maestro-azul">
                 </figure>
-                La Capacitación deberá ser tomada <b>también por los miembros de los Consejos de Administración.</b>
+                <div class="cont-parrafo" id="parrafo4">
+                    <p>La Capacitación deberá ser tomada <b>también por los miembros de los Consejos de Administración.</b></p>
+                </div>
             </div>
         </div>
         <div class="contenido13pag19">
-            <div class="cuadropag19-negro">
                 <p>
                     Se adicionan capítulos de Modelos Novedosos de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.
                 </p>
-            </div>
         </div>
     </div>
 </body>
