:construction_worker: Arreglo diseño 19 y 23

--- a/contenido/pag23.html
+++ b/contenido/pag23.html
@@ -19,16 +19,18 @@
 
         <div class="cont-fichas">
             <div class="fichas">
-                <div class="caja">
-                    <h3 class="titulo">
-                        Sistema Financiero Mexicano
-                    </h3>
-                    <figure class="cont-imagen">
-                        <img src="/build/img/contenido/Pag23/mapa.svg"   alt="">
-                    </figure>
-                </div>
+                <a href="#cont-ficha1" class="btnFichas">
+                    <div class="caja">
+                        <h3 class="titulo">
+                            Sistema Financiero Mexicano
+                        </h3>
+                        <figure class="cont-imagen">
+                            <img src="/build/img/contenido/Pag23/mapa.svg"   alt="">
+                        </figure>
+                    </div>
+                </a>
 
-                <div class="cont-info">
+                <div class="cont-info" id="cont-ficha1">
                     <ul>
                         <li>Compuesto por los sujetos obligados (S0).</li>
                         <li>Identifican y conocen a los clientes.</li>
@@ -39,32 +41,36 @@
                 </div>
             </div>
             <div class="fichas">
-                <div class="caja">
-                    <h3 class="titulo">
-                        Organismo Internacional
-                    </h3>
-                    <figure class="cont-imagen mitad">
-                        <img src="./build/img/contenido/Pag23/gafi.svg" alt="">
-                    </figure>
-                </div>
+                <a href="#cont-ficha2" class="btnFichas">
+                    <div class="caja">
+                        <h3 class="titulo">
+                            Organismo Internacional
+                        </h3>
+                        <figure class="cont-imagen mitad">
+                            <img src="./build/img/contenido/Pag23/gafi.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
 
-                <div class="cont-info">
+                <div class="cont-info" id="cont-ficha2">
                     <p>
                         Promulga un marco mínimo internacional  de las normas de PLD/CFT.
                     </p>
                 </div>
             </div>
             <div class="fichas">
-                <div class="caja">
-                    <h3 class="titulo">
-                        Organismos Reguladores
-                    </h3>
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag23/grupo1.svg" alt="">
-                    </figure>
-                </div>
+                <a href="#cont-ficha3" class="btnFichas">
+                    <div class="caja">
+                        <h3 class="titulo">
+                            Organismos Reguladores
+                        </h3>
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/grupo1.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
 
-                <div class="cont-info">
+                <div class="cont-info" id="cont-ficha3">
                     <ul>
                         <li>Creación del marco jurídico nacional relativo a PLD/CFT por medio de políticas.</li>
                         <li>Interpretación del marco normativo.</li>
@@ -72,31 +78,35 @@
                 </div>
             </div>
             <div class="fichas">
-                <div class="caja">
-                    <h3 class="titulo">
-                        Organismos Supervisores
-                    </h3>
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag23/grupo2.svg" alt="">
-                    </figure>
-                </div>
+                <a href="#cont-ficha4" class="btnFichas">
+                    <div class="caja">
+                        <h3 class="titulo">
+                            Organismos Supervisores
+                        </h3>
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/grupo2.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
 
-                <div class="cont-info">
+                <div class="cont-info" id="cont-ficha4">
                     <p>Supervisan que los SO del régimen PLD/CFT cumplan con sus obligaciones  (Vigilancia e Inspección).
                     </p>
                 </div>
             </div>
             <div class="fichas">
-                <div class="caja">
-                    <h3 class="titulo">
-                        Unidad de Inteligencia Financiera
-                    </h3>
-                    <figure class="cont-imagen mitad">
-                        <img src="./build/img/contenido/Pag23/uif.svg" alt="">
-                    </figure>
-                </div>
+                <a href="#cont-ficha5" class="btnFichas">
+                    <div class="caja">
+                        <h3 class="titulo">
+                            Unidad de Inteligencia Financiera
+                        </h3>
+                        <figure class="cont-imagen mitad">
+                            <img src="./build/img/contenido/Pag23/uif.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
 
-                <div class="cont-info">
+                <div class="cont-info" id="cont-ficha5">
                     <ul>
                         <li>Recibe reportes</li>
                         <li>información recibida para detectar posibles conductas</li>
@@ -116,48 +126,56 @@
 
         <div class="organismos">
             <div class="filas" id="fila1">
-                <div class="imagen">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag23/gafi.svg" alt="">
-                    </figure>
-                </div>
-                <div class="info">
+                <a class="btnImagen" href="#gafi">
+                    <div class="imagen">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/gafi.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
+                <div class="info" id="gafi">
                     <p>
                         La Financial Action Task Force o Grupo de Acción Financiera Internacional, promueve la implementación efectiva de medidas, regulaciones y operaciones para combatir el Lavado de Dinero y el Financiamiento al Terrorismo a través de sus “40 Recomendaciones”. 
                     </p>
                 </div>
             </div>
             <div class="filas" id="fila2">
-                <div class="imagen">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag23/shcp.svg" alt="">
-                    </figure>
-                </div>
-                <div class="info">
+                <a class="btnImagen" href="#shcp">
+                    <div class="imagen">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/shcp.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
+                <div class="info" id="shcp">
                     <p>
                         La Secretaría de Hacienda y Crédito Público, a través de la Unidad de Seguros, Pensiones y Seguridad Social, crea el marco jurídico relativo a la PLD/CFT por medio de la formulación de políticas de promoción, regulación y supervisión, así como la interpretación del Marco Normativo.
                     </p>
                 </div>
             </div>
             <div class="filas" id="fila3">
-                <div class="imagen">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag23/uif.svg" alt="">
-                    </figure>
-                </div>
-                <div class="info">
+                <a class="btnImagen" href="#uif">
+                    <div class="imagen">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/uif.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
+                <div class="info" id="uif">
                     <p>
                         La Unidad de Inteligencia Financiera de México, perteneciente a la SHCP, es la responsable de recibir, analizar e informar a las autoridades competentes sobre información de índole financiera.
                     </p>
                 </div>
             </div>
             <div class="filas" id="fila4">
-                <div class="imagen">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag23/cnsf.svg" alt="">
-                    </figure>
-                </div>
-                <div class="info">
+                <a class="btnImagen" href="#cnsf">
+                    <div class="imagen">
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag23/cnsf.svg" alt="">
+                        </figure>
+                    </div>
+                </a>
+                <div class="info" id="cnsf">
                     <p>
                         La Comisión Nacional de Seguros y Fianzas, supervisa que los sujetos obligados, cumplan con sus obligaciones por medio de acciones de vigilancia e inspección. 
                     </p>
